--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,15 +14,19 @@
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
+.App-intro.jumbotron .appTitle {
+  font-size: 3.5em;
+  color: white ;
 }
 
 .App-intro {
   font-size: large;
+  background-image: url('hands.jpg');
+  text-align:center;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
