--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,33 +1,4 @@
-.App {
-  text-align: center;
+.has-bg-image {
+  background: url('assets/Lokalsi.png') no-repeat right;
+  background-size: inherit;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro.jumbotron .appTitle {
-  font-size: 3.5em;
-  color: white ;
-}
-
-.App-intro {
-  font-size: large;
-  background-image: url('hands.jpg');
-  text-align:center;
-}
-
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
