Rewrite botstrap element to bulma

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,6 @@ body {
   font-family: sans-serif;
 }
 
-.jumbotron h1 .appTitle {
-  font-size: 1.5em;
-  color: white;
+.label {
+  text-align: left;
 }
