--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,7 @@
 .has-bg-image {
-  background: url('assets/warsaw.jpg') no-repeat right;
+  /*background: url('assets/warsaw.jpg') repeat center;*/
+  /*background-size: contain;*/
+  background: url('assets/plakat.jpg') no-repeat center;
   background-size: cover;
 }
 
@@ -9,6 +11,3 @@
   margin-bottom: 1rem;
 }
 
-#add-initiative-button {
-  width: 256px;
-}
