Submit proposal info

--- a/frontend/src/modules/InitiativesList/Initiative/styles.css
+++ b/frontend/src/modules/InitiativesList/Initiative/styles.css
@@ -6,3 +6,12 @@
 .reaction-button .icon {
   padding: 0 1rem;
 }
+
+.submit-proposal-info {
+  color: orange;
+  padding-bottom: 0.5rem;
+}
+
+#modal .submit-proposal-info {
+  font-weight: bold;
+}
