--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,3 +19,7 @@ a:hover {
 .space-between {
   justify-content: space-between !important;
 }
+
+#add-initiative-form {
+  position: absolute !important;
+}
